--- a/src/modules/property/service/AddProperty.scss
+++ b/src/modules/property/service/AddProperty.scss
@@ -1,6 +1,6 @@
-@import '../../assets/styles/scss/mixins/colors';
-@import '../../assets/styles/scss/mixins/screen';
-@import '../../assets/styles/scss/mixins/fonts';
+@import '../../../assets/styles/scss/mixins/colors';
+@import '../../../assets/styles/scss/mixins/screen';
+@import '../../../assets/styles/scss/mixins/fonts';
 
 .crudproperty-container {
   display: flex;
@@ -176,6 +176,25 @@
 
     &:hover {
       background-color: #d1d5db;
+    }
+  }
+}
+
+.year-input {
+    border: 1px solid #d1d5db;
+    border-radius: 10px;
+    padding: 0.7rem 1rem;
+    font-size: 1rem;
+    background-color: #f9fafb;
+    transition: all 0.3s ease;
+
+  .MuiOutlinedInput-root {
+    border-radius: 10px;
+    background-color: #f9fafb;
+
+    &.Mui-focused fieldset {
+      border-color: #107ACC;
+      box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.2);
     }
   }
 }
