--- a/src/modules/core/home/Home.scss
+++ b/src/modules/core/home/Home.scss
@@ -134,7 +134,7 @@
 
   
   .home-property-card-buttons {
-    margin-left: auto; /* 🔹 Empuja los botones al extremo derecho */
+    margin-left: auto; /* Empuja los botones al extremo derecho */
     display: flex;
     align-items: center;
     gap: 1rem 0.5rem !important; /* Espacio entre los botones */
