--- a/src/modules/property/service/AddProperty.scss
+++ b/src/modules/property/service/AddProperty.scss
@@ -100,7 +100,7 @@
   }
 }
 
-/* 🔹 Nueva sección: estilos para múltiples traces */
+/* Nueva sección: estilos para múltiples traces */
 .trace-block {
   background-color: #f9fafb;
   border: 1px solid #e5e7eb;
