--- a/src/modules/user/password/recover/PasswordRecover.scss
+++ b/src/modules/user/password/recover/PasswordRecover.scss
@@ -3,7 +3,7 @@
 @import '../../../../assets/styles/scss/mixins/fonts';
 
 /* =========================================================
-   🔹 CONTENEDOR PRINCIPAL
+   CONTENEDOR PRINCIPAL
    ========================================================= */
 .recover-container {
   display: flex;
@@ -19,7 +19,7 @@
 }
 
 /* =========================================================
-   🔹 TARJETA PRINCIPAL
+   TARJETA PRINCIPAL
    ========================================================= */
 .recover-card {
   background-color: #fff;
@@ -125,7 +125,7 @@
 }
 
 /* =========================================================
-   🔹 RESPONSIVE
+   RESPONSIVE
    ========================================================= */
 @media (max-width: 480px) {
   .recover-card {
