--- a/src/modules/user/password/reset/PasswordReset.scss
+++ b/src/modules/user/password/reset/PasswordReset.scss
@@ -3,7 +3,7 @@
 @import '../../../../assets/styles/scss/mixins/fonts';
 
 /* =========================================================
-   🔹 CONTENEDOR PRINCIPAL
+   CONTENEDOR PRINCIPAL
    ========================================================= */
 .reset-container {
   display: flex;
@@ -19,7 +19,7 @@
 }
 
 /* =========================================================
-   🔹 TARJETA PRINCIPAL
+   TARJETA PRINCIPAL
    ========================================================= */
 .reset-card {
   background-color: #fff;
@@ -112,7 +112,7 @@
 }
 
 /* =========================================================
-   🔹 RESPONSIVE
+   RESPONSIVE
    ========================================================= */
 @media (max-width: 480px) {
   .reset-card {
