--- a/src/assets/styles/scss/components/Alert.scss
+++ b/src/assets/styles/scss/components/Alert.scss
@@ -54,7 +54,7 @@
   transition: background 0.3s ease !important;
 
   &:hover {
-    background-color: darken(#2563eb, 10%) !important;
+    background-color: darken(#107ACC, 10%) !important;
   }
 }
 
