--- a/src/modules/property/service/EditProperty.scss
+++ b/src/modules/property/service/EditProperty.scss
@@ -240,14 +240,14 @@
     grid-template-columns: 1fr;
     gap: 0.75rem;
 
-    .trace-delete-btn {
+    .editproperty-trace-delete-btn {
       width: 100%;
       height: 44px;
     }
   }
 }
 
-.trace-delete-btn {
+.editproperty-trace-delete-btn {
   background-color: #fee2e2;
   color: #b91c1c;
   border: none;
