--- a/src/modules/core/index/Index.scss
+++ b/src/modules/core/index/Index.scss
@@ -56,7 +56,7 @@
   }
 }
 
-// Search styles are centralized in components/search/Search.scss
+// Cards
 
 .index-grid {
   display: grid;
@@ -179,5 +179,4 @@
     font-size: 1.8rem;
   }
 
-  // Search styles centralized; no overrides here
 }
